--- a/Pages/ViewResume.html
+++ b/Pages/ViewResume.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="pdf-container">
-        <iframe src="../Files/PROLAY HALDER_Internship.pdf" title="PDF Viewer"></iframe>
+        <iframe src="../Files/PROLAY HALDER.pdf" title="PDF Viewer"></iframe>
     </div>
 </body>
 </html>
