--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
                     </h1>
 
                     <div class="flex space-x-4 items-center mt-8 animate-from-bottom" style="--delay: 0.2s">
-                        <a href="#"
+                        <a href="#contact"
                             class="bg-zinc-900 text-white px-5 py-2 rounded-lg hover:bg-zinc-900 transition">Reach
                             Out</a>
                         <a href="./Pages/ViewResume.html"
                             class="pccv border border-gray-300 text-gray-700 px-5 py-2 rounded-lg hover:bg-gray-50 transition">Check
                             Resume</a>
-                        <a href="./Files/PROLAY HALDER_Internship.pdf" download
+                        <a href="./Files/PROLAY HALDER.pdf" download
                             class="mbcv border border-gray-300 text-gray-700 px-5 py-2 rounded-lg hover:bg-gray-50 transition">Check
                             Resume</a>
                     </div>
